Edited wiki page through web user interface.

--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -39,7 +39,7 @@ public class User
 }
 }}}
 
-With only a running redis-server instance running and the C# client, the full source to persist and retrieve a list of users is:
+With only a running redis-server instance running and the C# client, the full source to persist and retrieve a list of users is only:
 {{{
 var redis = new RedisClient();
 using (var redisUsers = redisClient.GetTypedClient<User>())
@@ -65,5 +65,96 @@ using (var redisUsers = redisClient.GetTypedClient<User>())
 ]
  */
 }}}
+
+Ayende has outlined a few scenarios that the Blog application should support. 
+  * Main page: show list of blogs
+  * Main page: show list of recent posts
+  * Main page: show list of recent comments
+  * Main page: show tag cloud for posts
+  * Main page: show categories
+  * Post page: show post and all comments
+  * Post page: add comment to post
+  * Tag page: show all posts for tag
+  * Categories page: show all posts for category
+
+The full source code for the Redis solution for each of these scenarios is [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BlogPostExample.cs available here].
+
+I will go through each solution in a little more detail below.
+
+===Main page: show list of blogs===
+Before we can show a list of blogs, we need to add some first. 
+
+{{{
+
+//Retrieve strongly-typed Redis clients that let's you natively persist POCO's
+using (var redisUsers = redisClient.GetTypedClient<User>())
+using (var redisBlogs = redisClient.GetTypedClient<Blog>())
+{
+	//Create the user, getting a unique User Id from the User sequence.
+	var mythz = new User { Id = redisUsers.GetNextSequence(), Name = "Demis Bellot" };
+
+	//create some blogs using unique Ids from the Blog sequence. Also adding references
+	var mythzBlogs = new List<Blog>
+	{
+		new Blog
+		{
+			Id = redisBlogs.GetNextSequence(),
+			UserId = mythz.Id,
+			UserName = mythz.Name,
+			Tags = new List<string> { "Architecture", ".NET", "Redis" },
+		},
+		new Blog
+		{
+			Id = redisBlogs.GetNextSequence(),
+			UserId = mythz.Id,
+			UserName = mythz.Name,
+			Tags = new List<string> { "Music", "Twitter", "Life" },
+		},
+	};
+	//Add the blog references
+	mythzBlogs.ForEach(x => mythz.BlogIds.Add(x.Id));
+
+	//Store the user and their blogs
+	redisUsers.Store(mythz);
+	redisBlogs.StoreAll(mythzBlogs);
+
+	//retrieve all blogs
+	var blogs = redisBlogs.GetAll();
+
+	//Recursively print the values of the POCO (For T.Dump() Extension method see: http://www.servicestack.net/mythz_blog/?p=202)
+	Console.WriteLine(blogs.Dump());
+}
+/*Output
+[
+	{
+		Id: 1,
+		UserId: 1,
+		UserName: Demis Bellot,
+		Tags: 
+		[
+			Architecture,
+			.NET,
+			Redis
+		],
+		BlogPostIds: []
+	},
+	{
+		Id: 2,
+		UserId: 1,
+		UserName: Demis Bellot,
+		Tags: 
+		[
+			Music,
+			Twitter,
+			Life
+		],
+		BlogPostIds: []
+	}
+]
+*/
+
+}}}
+
+
 
 _This document is a work in progres..._
