--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -34,10 +34,10 @@ Downloads for Redis Server Windows builds [RedisWindowsDownload can be found her
 = How to design a NoSQL database =
 
 Developers who would like to know how to approach building a sample Blog application using Redis should check out:
-  * *[DesigningNoSqlDatabase Designing a NoSql Database]*
+  * *[DesigningNoSqlDatabase How to design a NoSql Database]*
+It provides more good examples illustrating how to make effective use of the advanced features of the Redis client to solve real world scenarios.
 
-It follows Oren's (from the popular .NET blog [http://ayende.com/Blog/ ayende.com/Blog/]) series of blog posts illustrating how to go about designing a NoSQL database. 
-It provides a good example to illustrate how to make effective use of the more advanced features of the Redis client.
+It follows in tandem Oren Eini's (from the popular .NET blog [http://ayende.com/Blog/ ayende.com/Blog/]) series of blog posts illustrating how he would approach designing a NoSQL database. 
 
 = Examples =
 
