--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -83,6 +83,13 @@ I will go through each solution in a little more detail below.
 
 ===Main page: show list of blogs===
 Before we can show a list of blogs, we need to add some first. 
+Here I make effective use of the Redis client's unique sequence that is maintained for each type.
+
+In identifying my entities I have a general preference for 'automated ids' which are either 
+sequential integer ids or Guids - if the entities are going to be distributed across multiple data stores.
+
+Apart from that persisting an object is just a straight forward process serializing the object graph into a text-serialization format.
+The Redis Client uses TypeSerializer's [http://www.servicestack.net/mythz_blog/?p=176 JSV format] as it's the fastest and cleanest text-format for .NET POCO types.
 
 {{{
 
