Edited wiki page through web user interface.

--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -88,8 +88,8 @@ Here I make effective use of the Redis client's unique sequence that is maintain
 In identifying my entities I have a general preference for 'automated ids' which are either 
 sequential integer ids or Guids - if the entities are going to be distributed across multiple data stores.
 
-Apart from that persisting an object is just a straight forward process serializing the object graph into a text-serialization format.
-The Redis Client uses TypeSerializer's [http://www.servicestack.net/mythz_blog/?p=176 JSV format] as it's the fastest and cleanest text-format for .NET POCO types.
+Apart from that persisting an object is just a straight forward process of serializing the object graph into a text-serialization format.
+By default, the Redis Client uses TypeSerializer's [http://www.servicestack.net/mythz_blog/?p=176 JSV format] as it's the fastest and most compact text-format for .NET POCO types.
 
 {{{
 
