Edited wiki page through web user interface.

--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -37,7 +37,7 @@ Developers who would like to know how to approach building a sample Blog applica
   * *[DesigningNoSqlDatabase How to design a NoSql Database]*
 It provides more good examples illustrating how to make effective use of the advanced features of the Redis client to solve real world scenarios.
 
-It follows in tandem with Oren Eini's (from the popular .NET blog [http://ayende.com/Blog/ ayende.com/Blog/]) series of blog posts illustrating his approach to designing a NoSQL database. 
+It follows in tandem with Oren Eini's (from the popular .NET blog [http://ayende.com/Blog/ ayende.com/Blog/]) series of blog posts illustrating his approach to designing a NoSQL database with a RavenDB back end. 
 
 = Examples =
 
