--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -6,7 +6,7 @@
 [ServiceStackRedis ServiceStack.Redis] is an Open Source C# Redis client based on [http://twitter.com/migueldeicaza Miguel de Icaza] previous efforts with [http://github.com/migueldeicaza/redis-sharp redis-sharp]. 
 
 There are a number of different APIs available which are all a friendly drop-in with your local IOC:
-The [ServiceStack.Redis.RedisClient] class below implements the following interfaces:
+The `ServiceStack.Redis.RedisClient` class below implements the following interfaces:
  * [Caching ICacheClient] - If you are using Redis solely as a cache, you should bind to the [Caching ServiceStack's common interface] as there already are In-Memory an Memcached implementations available in ServiceStack, allowing you to easily switch providers in-future. 
  * [IRedisNativeClient] - For those wanting a low-level raw byte access (where you can control your own serialization/deserialization) that map 1:1 with Redis operations of the same name.
 
