Edited wiki page through web user interface.

--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -13,7 +13,7 @@ I will try to add my own thoughts on and where possible show how you can use the
 
 == The relational modeling anti pattern in document databases ==
 
-If you've spent a lot of time building solutions with an RDBMS back-end it can be hard to know which part of your schema is due to the problem domain and which part is the result of an implementation constraint trying to map your ideal domain model onto a relational tabular model. 
+If you've spent a lot of time building solutions with an RDBMS back-end it can be hard to know which part of your schema is due to the problem domain and which part is the result of an implementation constraint trying to map your ideal domain model onto a relational tabular structure. 
 
 My approach before designing any system is to map out the ideal domain model we need to build in order before I reach for an IDE or a db gui schema creator. Unfortunately creating POCO types is just so damn quick in VS.NET/C#/R# that I've ditched the pencil and paper a long time ago and jump right into using C# automatic properties like a light-weight DSL ripping out entities quicker than I can draw crows feet.
 
