--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -78,9 +78,7 @@ Ayende has outlined a few scenarios that the Blog application should support.
   * Tag page: show all posts for tag
   * Categories page: show all posts for category
 
-The full source code for the Redis solution for each of these scenarios is [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BlogPostExample.cs available here].
-
-I will go through each solution in a little more detail below.
+The full source code for the Redis solution for each of these scenarios is [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BlogPostExample.cs available here]. Although I will go through each solution in a little more detail below.
 
 ===Main page: show list of blogs===
 Before we can show a list of blogs, we need to add some first. 
