Edited wiki page through web user interface.

--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -10,7 +10,7 @@ Here is a list of ayende's series of blog posts on the subject:
   * [http://ayende.com/Blog/archive/2010/04/21/that-no-sql-thing-modeling-documents-in-a-document-database.aspx That No SQL Thing: Modeling Documents in a Document Database]
   * [http://ayende.com/Blog/archive/2010/04/22/that-no-sql-thing-document-database-migrations.aspx That No SQL Thing: Document Database Migrations]
 
-I will try to add my own thoughts on and where possible show how you can use the advanced features in Redis and [ServiceStackRedis Service Stack's C# Redis Client] to provide simple, fast and effective solutions. The entire source code for this example is available in its simplest form at: [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BlogPostExample.cs BlogPostExample.cs]. I will be re-factoring this solution in what I consider a 'best practices approach' where I will shove all Redis access behind a repository that I will be maintaining at: [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BestPractice/BlogPostBestPractice.cs BlogPostBestPractice.cs]
+I will try to add my own thoughts on and where possible show how you can use the advanced features in Redis and [ServiceStackRedis Service Stack's C# Redis Client] to provide simple, fast and effective solutions. The entire source code for this example is available in its simplest form at: [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BlogPostExample.cs BlogPostExample.cs]. I will be re-factoring this solution in what I consider a 'best practices approach' where I will shove all Redis access behind a repository (so the client doesn't know it's even being used) which I will be maintaining at: [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BestPractice/BlogPostBestPractice.cs BlogPostBestPractice.cs]
 
 == Modeling Entities in a NoSQL Database ==
 
