--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -3,7 +3,7 @@ The fastest and most compact text-based serializer for .NET -
 more info on its JSV Format is on the [http://www.servicestack.net/mythz_blog/?p=176 introductory blog post].
 
 
-= Introduction =
+= Fast new text-serialization format optimized for serializing C# POCO types =
 
 Included in the Service Stack libraries is *Type Serializer*, a fast, light-weight compact Text Serializer which can be used to serialize any .NET data type including your own custom POCO's and DataContract's.
 
