--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -1,5 +1,5 @@
 #labels Redis,NoSql
-This page illustrates a good solution on how to design a simple Blog application the [http://code.google.com/p/redis/ Redis] way, where we use advanced features of the [ServiceStackRedis ServiceStack's C# Redis Client] to provide fast, simple and elegant solutions to real world scenarios.
+This page illustrates a good solution on how to design a simple Blog application using [http://code.google.com/p/redis/ Redis], where we use advanced features of the [ServiceStackRedis ServiceStack's C# Redis Client] to provide fast, simple and elegant solutions to real world scenarios.
 
 = Designing a NoSQL Database using Redis =
 
