Edited wiki page through web user interface.

--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -28,6 +28,22 @@ As such, it's utilized within ServiceStack's other components:
 = Download =
 TypeSerializer is included with [http://servicestack.googlecode.com/files/ServiceStack.zip ServiceStack.zip] or available to download separately in a standalone  [http://servicestack.googlecode.com/files/ServiceStack.Text.zip ServiceStack.Text.zip].
 
+= Simple Usage =
+
+Like most of the interfaces in Service Stack, the API is simple and descriptive. In most cases these are the only methods that you would commonly use:
+
+{{{
+string TypeSerializer.SerializeToString<T>(T value);
+void TypeSerializer.SerializeToWriter<T>(T value, TextWriter writer);
+
+T TypeSerializer.DeserializeFromString<T>(string value);
+T TypeSerializer.DeserializeFromReader<T>(TextReader reader);
+
+}}}
+
+Where *T* can be any .NET POCO type. That’s all there is - the API was intentionally left simple :)
+You may also want to check out the very useful [http://www.servicestack.net/mythz_blog/?p=202 `T.Dump()` extension method].
+
 ----
 
 = Performance =
