--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -48,7 +48,7 @@ You may also be interested in the very useful [http://www.servicestack.net/mythz
 ----
 
 = Performance =
-Type Serializer is actually the fastest and most compact text serializer available for .NET. 
+Type Serializer is actually the fastest and most compact *text serializer* available for .NET. 
 Out of all the serializers benchmarked, it is the only one to remain competitive with [http://code.google.com/p/protobuf-net/ protobuf-net]'s very fast implementation of [http://code.google.com/apis/protocolbuffers/ Protocol Buffers] - google's high-speed binary protocol.
 
 Below is a series of benchmarks serialize the different tables in the [http://code.google.com/p/servicestack/source/browse/trunk/Common/Northwind.Benchmarks/Northwind.Common/DataModel/NorthwindData.cs Northwind database] (3202 records) with the most popular serializers available for .NET:
