--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -1,13 +1,13 @@
 #labels Redis,NoSql
 This page illustrates a good solution on how to design a simple Blog application with [http://code.google.com/p/redis/ Redis] using advanced features of [ServiceStackRedis ServiceStack's C# Redis Client] to provide fast, simple and elegant solutions to real world scenarios.
 
+Index of pages in this series showing how to design and use a NoSQL datastore and how it differs with traditional RDBMS solutions:
+  * [DesigningNoSqlDatabase Designing a NoSQL Database using Redis]
+  * [MigrationsUsingSchemalessNoSql Painless data migrations using schema-less NoSql data stores] 
+
 = Designing a NoSQL Database using Redis =
 
 Oren Eini from the popular .NET blog http://ayende.com/Blog/, is putting together a [http://ayende.com/Blog/archive/2010/04/20/that-no-sql-thing-the-relational-modeling-anti-pattern-in.aspx series of blog posts] explaining how to go about designing a simple blog application using a NoSQL database. Although he's using his RavenDB as a reference implementation, this example applies equally well to Redis and other NoSQL variants. Some solutions will vary based on the advanced features of each NoSQL solution but the 'core data models' should remain the same.
-
-In following ayende's posts, here are my blog posts on the subject:
-  * [DesigningNoSqlDatabase Designing a NoSQL Database using Redis]
-  * [MigrationsUsingSchemalessNoSql Painless data migrations using schema-less NoSql data stores] 
 
 I will try to add my own thoughts on and where possible show how you can use the advanced features in Redis the C# Client to provide simple, fast and effective solutions. The entire source code for this example is available in its simplest form at: [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BlogPostExample.cs BlogPostExample.cs]. I will be re-factoring this solution in what I consider a 'best practices approach' for large applications where I will shove all Redis access behind a repository (so the client doesn't know it's even being used) which I will be maintaining at: [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BestPractice/BlogPostBestPractice.cs BlogPostBestPractice.cs]
 
