--- a/wiki/MigrationsUsingSchemalessNoSql.wiki
+++ b/wiki/MigrationsUsingSchemalessNoSql.wiki
@@ -7,17 +7,17 @@ This page uses the `BlogPost` type defined in the [DesigningNoSqlDatabase previo
 
 = Painless data migrations with Redis and other schema-less NoSQL datastores =
 
-Developing *new* greenfield database systems utilizing a RDBMS back-end is mostly a trouble-free experience. Before the system is live, you can easily modify a schema by nuking the entire applications database, and re-create it using some automated DDL scripts then populate it with test data that fit the new schema. 
+Developing *new* greenfield database systems utilizing a RDBMS back-end is mostly a trouble-free experience. Before the system is live, you're able to easily modify a schema by nuking the entire application database, and re-creating it with automated DDL scripts to create and then populate it with test data that fits the new schema. 
 
-The real troubles in your IT life happens after you deploy your first release and your system goes live. At that point you no longer have the option to nuke the database and re-create it from scratch. If you're lucky you have a script in place that can automatically infer the required DDL statements to migrate from your old schema to your new one. However any significant changes to your schema will involve downtime, late nights and a non-trivial amount of effort to ensure a successful migration to the new schema.
+The real troubles in your IT life happens after your first deployment and your system goes live. At that point you no longer have the option to nuke the database and re-create it from scratch. If you're lucky you have a script in place that can automatically infer the required DDL statements to migrate from your old schema to your new one. However any significant changes to your schema are likely to involve late nights, downtime, and a non-trivial amount of effort to ensure a successful migration to the new db schema.
 
-With schema-less data stores however this process is much less painful. In fact in most cases where you're just adding and removing fields it doesn't exist at all. By not having your datastore understand intrinsic details of your schema, it means it's no longer an infrastructure-level issue and can easily be handled by application logic if needed.
+This process is much less painful with schema-less data stores. In fact in most cases when you're just adding and removing fields it doesn't exist at all. By not having your datastore understand intrinsic details of your schema, it means it's no longer an infrastructure-level issue and can easily be handled by application logic if needed.
 
-To illustrate what can be achieved in practice, I will show two solutions.
+To illustrate what can be achieved in practice, I will demonstate two solutions.
   * The do-nothing approach - where adding, removing fields and non-destructive change of field types are automatically handled.
   * Using a custom translation - using application level logic to customize the translation between the old and new types.
 
-The full source code for this example is [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BestPractice/BlogPostMigrations.cs available here].
+The full runnable source code for these example are [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BestPractice/BlogPostMigrations.cs available here].
 
 == Example Code ==
 To demonstrate a typical migration using a practical example I'm using the `BlogPost` type on the previous page and projecting it into a `New.BlogPost` type that is fundamentally different. The definition of both types are below:
