--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -2,7 +2,7 @@
 This page illustrates a good solution on how to design a simple Blog application with [http://code.google.com/p/redis/ Redis] using advanced features of [ServiceStackRedis ServiceStack's C# Redis Client] to provide fast, simple and elegant solutions to real world scenarios.
 
 ==== Page links to all NoSQL Blog examples ====
-  * *[DesigningNoSqlDatabase Designing a NoSQL Database using Redis]*
+  * Designing a NoSQL Database using Redis
   * [MigrationsUsingSchemalessNoSql Painless data migrations using Redis and other schema-less NoSQL datastores]
 
 = Designing a NoSQL Database using Redis =
